sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: missing argument list for method setValue in class SortingEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `setValue _` or `setValue(_,_)` instead of `setValue`.
    setValue(j)=v
    ^