sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	var n=getValueCount()-1
  for (i<-2 to n){
    var v=getValue(i)
    var j=i
    while(getValue(j-1)>v){
      swap(j,j-1)
      j=j-1
    }
    setValue(j)=v
    }
  }